--- a/Thred/FeedView/User Search/Search Table/SearchProductTableViewCell.xib
+++ b/Thred/FeedView/User Search/Search Table/SearchProductTableViewCell.xib
@@ -17,11 +17,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchProductCell" rowHeight="81" id="KGk-i7-Jjw" customClass="SearchProductTableViewCell" customModule="Thred" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="399" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchProductCell" rowHeight="85" id="KGk-i7-Jjw" customClass="SearchProductTableViewCell" customModule="Thred" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="399" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="399" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="399" height="84"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0vO-vy-y0N">
@@ -48,35 +48,32 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="kzP-Xy-dhQ">
                                 <rect key="frame" x="63" y="0.0" width="263" height="60"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Xh5-Yi-FBw">
-                                        <rect key="frame" x="0.0" y="0.0" width="144" height="35"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Xh5-Yi-FBw">
+                                        <rect key="frame" x="0.0" y="0.0" width="141.5" height="35"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Product Name&quot;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bd3-8a-Urx">
-                                                <rect key="frame" x="0.0" y="0.0" width="144" height="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Product Name&quot; g" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bd3-8a-Urx">
+                                                <rect key="frame" x="0.0" y="0.0" width="141.5" height="20"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" priority="999" constant="30" id="x7o-UB-w7D"/>
+                                                    <constraint firstAttribute="height" constant="20" id="x7o-UB-w7D"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="18"/>
+                                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="16"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fZD-Vr-Fbh">
-                                                <rect key="frame" x="0.0" y="22" width="51.5" height="13"/>
+                                                <rect key="frame" x="0.0" y="20" width="51.5" height="15"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Price&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pxc-v8-jl3">
-                                                        <rect key="frame" x="0.0" y="0.0" width="51.5" height="13"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="51.5" height="15"/>
                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="15"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sl3-lv-cvi">
-                                                <rect key="frame" x="0.0" y="35" width="42" height="0.0"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="UF7-rI-sKS"/>
+                                        </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jA1-Hb-RKB">
                                         <rect key="frame" x="0.0" y="35" width="41" height="25"/>
@@ -115,7 +112,7 @@
                                             </stackView>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size: &quot;Size&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jK4-fR-ypc">
                                                 <rect key="frame" x="41" y="0.0" width="0.0" height="25"/>
-                                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="15"/>
+                                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="13"/>
                                                 <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -149,10 +146,10 @@
                         </subviews>
                     </stackView>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ohU-6F-LDu">
-                        <rect key="frame" x="0.0" y="0.0" width="399" height="80"/>
+                        <rect key="frame" x="0.0" y="0.0" width="399" height="84"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Unavailable" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2GS-rN-SHD">
-                                <rect key="frame" x="0.0" y="0.0" width="399" height="80"/>
+                                <rect key="frame" x="0.0" y="0.0" width="399" height="84"/>
                                 <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -170,7 +167,6 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="ohU-6F-LDu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="C5b-eT-bm9"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="0vO-vy-y0N" secondAttribute="bottom" constant="10" id="Cnz-Vc-ifg"/>
                     <constraint firstItem="ohU-6F-LDu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="JHl-cc-p1q"/>
                     <constraint firstAttribute="trailing" secondItem="ohU-6F-LDu" secondAttribute="trailing" id="SNB-ws-3RM"/>
                     <constraint firstAttribute="trailing" secondItem="0vO-vy-y0N" secondAttribute="trailing" constant="10" id="c1R-xf-KsX"/>
@@ -192,7 +188,7 @@
                 <outlet property="quantityView" destination="m89-om-2HG" id="lIN-nZ-HS4"/>
                 <outlet property="sizingLbl" destination="jK4-fR-ypc" id="XA4-qF-nj0"/>
             </connections>
-            <point key="canvasLocation" x="194.92753623188406" y="87.723214285714278"/>
+            <point key="canvasLocation" x="194.92753623188406" y="89.0625"/>
         </tableViewCell>
     </objects>
     <resources>
