--- a/Thred/Storyboards/ChangeEmailVC.storyboard
+++ b/Thred/Storyboards/ChangeEmailVC.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="loy-1T-Bbi">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -30,8 +30,8 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dpb-o0-5Vd">
                                         <rect key="frame" x="45" y="45" width="324" height="772"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="9Mg-Uk-heg">
-                                                <rect key="frame" x="0.0" y="0.0" width="324" height="242"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="9Mg-Uk-heg">
+                                                <rect key="frame" x="0.0" y="0.0" width="324" height="181"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="envelope.fill" translatesAutoresizingMaskIntoConstraints="NO" id="QlH-aI-tNu">
                                                         <rect key="frame" x="0.0" y="0.0" width="324" height="75"/>
@@ -40,14 +40,17 @@
                                                             <constraint firstAttribute="height" constant="75" id="Avb-DD-jeP"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Enter a new email address for your account" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r0x-SM-IMZ">
-                                                        <rect key="frame" x="0.0" y="75" width="324" height="137"/>
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Enter a new email address for your account:" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r0x-SM-IMZ">
+                                                        <rect key="frame" x="0.0" y="78" width="324" height="70"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="70" id="SL4-V1-bq6"/>
+                                                        </constraints>
                                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                     </textView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Email&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqn-SM-l9x">
-                                                        <rect key="frame" x="0.0" y="212" width="324" height="30"/>
+                                                        <rect key="frame" x="0.0" y="151" width="324" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="9fU-DS-rin"/>
                                                         </constraints>
@@ -57,12 +60,12 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dsa-SN-B1L">
-                                                <rect key="frame" x="0.0" y="252" width="324" height="180"/>
+                                                <rect key="frame" x="0.0" y="191" width="324" height="180"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lE1-QC-Wac">
                                                         <rect key="frame" x="0.0" y="0.0" width="324" height="30"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="30" id="nTm-aN-HmG"/>
+                                                            <constraint firstAttribute="height" constant="30" id="Sf4-fw-9lT"/>
                                                         </constraints>
                                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <fontDescription key="fontDescription" name="NexaW01-Regular" family="NexaW01-Regular" pointSize="13"/>
@@ -72,7 +75,7 @@
                                                         <rect key="frame" x="0.0" y="40" width="324" height="65"/>
                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" priority="999" constant="65" id="C7n-Rf-0p9"/>
+                                                            <constraint firstAttribute="height" constant="65" id="C7n-Rf-0p9"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="continue" enablesReturnKeyAutomatically="YES" textContentType="email"/>
@@ -89,7 +92,7 @@
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7NY-XW-HeU">
-                                                <rect key="frame" x="0.0" y="442" width="324" height="36"/>
+                                                <rect key="frame" x="0.0" y="381" width="324" height="36"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="36" id="pJI-3y-m1r"/>
                                                 </constraints>
@@ -102,7 +105,7 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qWn-aK-GvJ">
-                                                <rect key="frame" x="0.0" y="488" width="324" height="284"/>
+                                                <rect key="frame" x="0.0" y="427" width="324" height="345"/>
                                             </view>
                                         </subviews>
                                     </stackView>
@@ -139,11 +142,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qli-ke-0PM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6745" y="-1131"/>
+            <point key="canvasLocation" x="6744.9275362318849" y="-1131.0267857142856"/>
         </scene>
     </scenes>
     <resources>
-        <image name="envelope.fill" width="33.5" height="33.5"/>
+        <image name="envelope.fill" width="33.333332061767578" height="33.333332061767578"/>
         <namedColor name="LoadingColor">
             <color red="0.090000003576278687" green="0.75" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
